# libvsq

./: .gitignore  .gitmodules  .travis.yml  ArticulationType.h  ArticulationType.hpp  BP.cpp  BP.h  BP.hpp  BPList.cpp  BPList.h  BPList.hpp  BPListKeyClockIterator.h  BPListKeyClockIterator.hpp  BPListSearchResult.h  BPListSearchResult.hpp  BasicTypes.hpp  BitConverter.cpp  BitConverter.hpp  ByteArrayOutputStream.cpp  ByteArrayOutputStream.h  ByteArrayOutputStream.hpp  CMakeLists.txt  CP932Converter.cpp  CP932Converter.hpp  CP932ConverterData.hpp  Common.cpp  Common.hpp  Doxyfile  DynamicsMode.hpp  EnumUtil.hpp  Event.cpp  Event.h  Event.hpp  EventList.cpp  EventList.h  EventList.hpp  EventListIndexIterator.cpp  EventListIndexIterator.hpp  EventListIndexIteratorKind.hpp  EventListIterator.h  (+110 more)
.travis/install/: linux.sh  osx.sh
documents/: class_diagram.asta
include/libvsq/: ArticulationType.hpp  BP.hpp  BPList.hpp  BPListSearchResult.hpp  BasicTypes.hpp  BitConverter.hpp  ByteArrayOutputStream.hpp  CP932Converter.hpp  Common.hpp  DynamicsMode.hpp  EnumUtil.hpp  Event.hpp  EventListIndexIterator.hpp  EventListIndexIteratorKind.hpp  EventType.hpp  FileInputStream.hpp  FileOutputStream.hpp  FileUtil.hpp  Handle.hpp  HandleType.hpp  InputStream.hpp  Lyric.hpp  Master.hpp  MeasureLine.hpp  MeasureLineIterator.hpp  MidiEvent.hpp  MidiParameterType.hpp  Mixer.hpp  MixerItem.hpp  MusicXmlWriter.hpp  Namespace.hpp  NoteNumberUtil.hpp  NrpnEvent.hpp  OutputStream.hpp  PhoneticSymbol.hpp  PhoneticSymbolDictionary.hpp  PlayMode.hpp  PublicForUnitTest.hpp  SMFReader.hpp  Sequence.hpp  (+17 more)
osx/libvsq.xcworkspace/: contents.xcworkspacedata
resources/: PhoneticSymbolDictionaryVocaloidEn.inc  separate.rb
src/: BP.cpp  BPList.cpp  BitConverter.cpp  ByteArrayOutputStream.cpp  CP932Converter.cpp  Common.cpp  Event.cpp  EventListIndexIterator.cpp  EventType.cpp  FileInputStream.cpp  FileOutputStream.cpp  FileUtil.cpp  Handle.cpp  Lyric.cpp  Master.cpp  MeasureLineIterator.cpp  MidiEvent.cpp  MidiParameterType.cpp  Mixer.cpp  MixerItem.cpp  MusicXmlWriter.cpp  NoteNumberUtil.cpp  NrpnEvent.cpp  PhoneticSymbol.cpp  PhoneticSymbolDictionary.cpp  PhoneticSymbolDictionaryVocaloidEn.0.inc  PhoneticSymbolDictionaryVocaloidEn.1.inc  PhoneticSymbolDictionaryVocaloidEn.10.inc  PhoneticSymbolDictionaryVocaloidEn.11.inc  PhoneticSymbolDictionaryVocaloidEn.12.inc  PhoneticSymbolDictionaryVocaloidEn.13.inc  PhoneticSymbolDictionaryVocaloidEn.14.inc  PhoneticSymbolDictionaryVocaloidEn.15.inc  PhoneticSymbolDictionaryVocaloidEn.16.inc  PhoneticSymbolDictionaryVocaloidEn.17.inc  PhoneticSymbolDictionaryVocaloidEn.18.inc  PhoneticSymbolDictionaryVocaloidEn.19.inc  PhoneticSymbolDictionaryVocaloidEn.2.inc  PhoneticSymbolDictionaryVocaloidEn.20.inc  PhoneticSymbolDictionaryVocaloidEn.21.inc  (+32 more)
tests/: ArticulationTypeTest.cpp  BPListKeyClockIteratorTest.cpp  BPListSearchResultTest.cpp  BPListTest.cpp  BPTest.cpp  BitConverterTest.cpp  ByteArrayOutputStreamTest.cpp  CMakeLists.txt  CP932ConverterTest.cpp  CommonTest.cpp  Event.ListIteratorTest.cpp  Event.ListTest.cpp  EventListIndexIteratorKindTest.cpp  EventListIndexIteratorTest.cpp  EventListIteratorTest.cpp  EventListTest.cpp  EventTest.cpp  EventTypeTest.cpp  EventWriteOptionTest.cpp  FileInputStreamTest.cpp  FileOutputStreamTest.cpp  HandleTest.cpp  HandleTypeTest.cpp  LyricTest.cpp  Makefile  MasterTest.cpp  MeasureLineIteratorTest.cpp  MidiEventTest.cpp  MidiParameterTypeTest.cpp  MixerItemTest.cpp  MixerTest.cpp  MusicXmlWriterTest.cpp  NoteNumberUtilTest.cpp  NrpnEventTest.cpp  PhoneticSymbolDictionaryTest.cpp  PhoneticSymbolElementTest.cpp  PhoneticSymbolTest.cpp  PlayModeTest.cpp  SMFReaderTest.cpp  SequenceTest.cpp  (+21 more)
tests/MusicXmlWriterTest/expected/: expected.xml
tests/PhoneticSymbolDictionaryTest/fixture/: dict_en.txt
tests/VSQFileReaderTest/fixture/: fixture.vsq
tests/VSQFileWriterTest/expected/: expected.vsq
tests/VSQXFileReaderTest/fixture/: d3s_3.vsqx  d3s_4.vsqx
tools/: astyle.sh  audit.sh  build.sh
visualstudio/: libvsq.sln
